# lib_harfbuzz

./: CMakeLists.txt  README.md
cmake/: FindExtFreetype.cmake  util.cmake
opt/: folders.csv
